added wg2 and wg3

--- a/index.html
+++ b/index.html
@@ -98,13 +98,20 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 # 2. What is *Distant Reading for European Literary History* about?
 
 --
-## Research objectives
+## The term "Distant Reading"
+* Term first used by Franco Moretti ("second-hand" reading) <!-- .element: class="fragment" data-fragment-index="1" -->
+* Has then broadened in meaning to mean any computational analysis of literary texts <!-- .element: class="fragment" data-fragment-index="2" -->
+* Narrower term: stylometry, in the sense of quantitative methods for authorship attribution <!-- .element: class="fragment" data-fragment-index="3" -->
+* New term: Computational Literary Studies <!-- .element: class="fragment" data-fragment-index="4" -->
+
+--
+## Action: Research objectives
 * Resources: Build a multilingual reference collection of European novels ("ELTeC") <!-- .element: class="fragment" data-fragment-index="1" -->
 * Methods: Explore, evaluate, adapt and share computational methods of text analysis for ELTeC <!-- .element: class="fragment" data-fragment-index="2" -->
 * Theory: Think through consequences of digital data and methods for literary history and theory  <!-- .element: class="fragment" data-fragment-index="3" -->
 
 --
-## Networking objectives
+## Action: Networking objectives
 * Bring together corpus linguists, computational linguists, digital literary scholars, literary historians and theorists <!-- .element: class="fragment" data-fragment-index="1" -->
 * Spread and share competencies in the three areas above among these groups <!-- .element: class="fragment" data-fragment-index="2" -->
 * Support relevant collaborative grant proposals on the national and European levels <!-- .element: class="fragment" data-fragment-index="3" -->
@@ -112,7 +119,9 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 --
 ## Current Network
 * 32 countries are involved 
-* more than 200 scholars are participating
+* 200+ scholars are participating
+* 4 Working Groups
+* several spin-off projects
 
 
 ---
@@ -121,10 +130,10 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 --
 ## European Literary Text Collection (ELTeC)
 * Comparable sets of novels for at least 10 European languages
-* Each set: 100 novels published between 1850 and 1920
+* Each set: 100 novels published between 1840 and 1920
 * Extensions (chronologically or simply additional texts)
 * WG leads: Carolin Odebrecht (DE), Lou Burnard (UK), Borja Navarro Colorado (SP), Martina Scholger (AT)
-* Currently: about 1050 novels published
+* Currently: more than 1000 novels published
 * More information: https://distantreading.github.io/ELTeC/
 
 --
@@ -143,7 +152,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
     * at least 20% are short (10-50k words), at least 20% are long (>100k words) novels <!-- .element: class="fragment" data-fragment-index="3" -->
     * 9-11 authors are represented with three novels <!-- .element: class="fragment" data-fragment-index="4" -->
     * the novels should be spread out evenly across the entire period <!-- .element: class="fragment" data-fragment-index="5" -->
-
+* <!-- .element: class="fragment" data-fragment-index="6" --> see: https://distantreading.github.io/ELTeC/ 
 
 --
 ## Collection building: Text encoding
@@ -177,13 +186,36 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
 --
 ## Example for Adaptation: Stylometry
-<img height="550" data-src="img/delta-example-label.png"></img>
+* Computational Authorship Attribution <!-- .element: class="fragment" data-fragment-index="1" -->
+* Based on the word frequency profiles of texts <!-- .element: class="fragment" data-fragment-index="2" -->
+* Multiple small differences are decisive (Burrows) <!-- .element: class="fragment" data-fragment-index="3" -->
+* Applications <!-- .element: class="fragment" data-fragment-index="4" -->
+   * Elena Ferrante / Domenico Starnone + Anita Raja
+   * Robert Galbraith (Joan K. Rowlings): The Cuckoo's Calling
+   * Corneille and Molière
+   * many more
 
 
 --
-## Cross-Language Distant Reading:<br/>Direct Speech
+## Example for Adaptation: Stylometry
+<img height="450" data-src="img/evert-delta.jpg"></img>
+
+--
+## Example for Adaptation: Stylometry
+<img height="450" data-src="img/delta-example-label.png"></img>
+
+
+--
+## Cross-Language Distant Reading:<br/>Direct Speech Recognition
+<img height="450" data-src="img/cost-direct-speech.jpg"></img>
+
+--
+## Cross-Language Distant Reading:<br/>Direct Speech Recognition
 <img height="450" data-src="img/direct-speech-both.png"></img>
 
+
+--
+## Cross-Language 
 
 
 ---
@@ -194,9 +226,33 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <br/>
 * Think through consequences for literary history and theory <!-- .element: class="fragment" data-fragment-index="1" -->
 * Key concepts: style, genre, authorship, periodization, canonization, intertextuality, etc. <!-- .element: class="fragment" data-fragment-index="2" -->
-<br/><br/>
-* WG lead: Antonija Primorac <!-- .element: class="fragment" data-fragment-index="3" -->
-* Co-leads: Rosario Arias, Corina Moldovan <!-- .element: class="fragment" data-fragment-index="3" -->
+* WG leads: Antonija Primorac (HR), Rosario Arias (SP) <!-- .element: class="fragment" data-fragment-index="3" -->
+
+--
+## Example of canonization: concept
+* Required reading in school or university <!-- .element: class="fragment" data-fragment-index="1" -->
+* Enduring interpretability <!-- .element: class="fragment" data-fragment-index="2" -->
+* Complexity; quality; importance <!-- .element: class="fragment" data-fragment-index="3" -->
+* Critical and/or commercial success <!-- .element: class="fragment" data-fragment-index="4" -->
+* Literary novels as non-genre novel <!-- .element: class="fragment" data-fragment-index="5" -->
+
+--
+## Example of canonization: indicators 
+* text-external <!-- .element: class="fragment" data-fragment-index="1" -->
+    * Reprint and sales figures <!-- .element: class="fragment" data-fragment-index="2" -->
+    * Library holding data <!-- .element: class="fragment" data-fragment-index="3" -->
+    * Number of entries in academic bibliographies <!-- .element: class="fragment" data-fragment-index="4" -->
+    * Amount of text in reference literary histories <!-- .element: class="fragment" data-fragment-index="5" -->
+    * Number of Wikipedias with an article <!-- .element: class="fragment" data-fragment-index="6" -->
+    * Number of mentions on reading lists <!-- .element: class="fragment" data-fragment-index="7" -->
+    * Literary prizes received <!-- .element: class="fragment" data-fragment-index="8" -->
+* text-internal <!-- .element: class="fragment" data-fragment-index="9" -->
+    * Lexical complexity / difficulty <!-- .element: class="fragment" data-fragment-index="10" -->
+    * Syntactic complexity / sentence length <!-- .element: class="fragment" data-fragment-index="11" -->
+    * Combination: Measures of readability <!-- .element: class="fragment" data-fragment-index="12" -->
+    * Complexity of plot, characters, meaning <!-- .element: class="fragment" data-fragment-index="13" -->
+
+    
 
 
 
