--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <!-- Any section element inside of this container is displayed as a slide -->
 
 ##Distant Reading for European Literary History. A COST Action
-<img height="60" data-src="img/basics/distantreading_rgb_tuerkis-blau.jpg"></img>
+<img height="50" data-src="img/basics/distantreading_rgb_tuerkis-blau.jpg"></img>
 <hr/>
 <br/>Christof Schöch (Trier, Germany)
 <br/>Vilnius Lectures, Sept. 2020
@@ -46,7 +46,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <br/>slides: https://dh-trier.github.io/talks
 <br/>
 <hr/>
-<a href="http://www.cost.eu"><img height="100" data-src="img/basics/cost-and-eu.png"></img></a>
+<a href="http://www.cost.eu"><img height="80" data-src="img/basics/cost-and-eu.png"></img></a>
 
 
 
@@ -152,7 +152,12 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
     * at least 20% are short (10-50k words), at least 20% are long (>100k words) novels <!-- .element: class="fragment" data-fragment-index="3" -->
     * 9-11 authors are represented with three novels <!-- .element: class="fragment" data-fragment-index="4" -->
     * the novels should be spread out evenly across the entire period <!-- .element: class="fragment" data-fragment-index="5" -->
-* <!-- .element: class="fragment" data-fragment-index="6" --> see: https://distantreading.github.io/ELTeC/ 
+
+--
+## ELTeC Overview
+<img height="450" data-src="img/eltec-overview.jpg"></img>
+<br/>https://distantreading.github.io/ELTeC/ 
+
 
 --
 ## Collection building: Text encoding
@@ -214,8 +219,6 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <img height="450" data-src="img/direct-speech-both.png"></img>
 
 
---
-## Cross-Language 
 
 
 ---
@@ -254,25 +257,34 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
     
 
-
-
 ---
-# To learn more
-<br/>
-* To learn more
-    * http://distant-reading.net/
-    * https://github.com/distantreading
-    * http://www.cost.eu/COST_Actions/ca/CA16204
-    * https://twitter.com/DistantReading
-* These slides: 
-    * http://distantreading.github.io/slides-en 
+# Time for questions! 
 
+--
+## To learn more: websites
+* http://distant-reading.net/
+* https://github.com/distantreading
+* http://www.cost.eu/COST_Actions/ca/CA16204
+* https://twitter.com/DistantReading
+
+--
+## To learn more: readings
+<small>
+* Burnard, Lou, Schoöch, and Odebrecht. “In Search of Comity: TEI for Distant Reading.” November 1, 2019. https://doi.org/10.5281/zenodo.3552489.
+* Byszuk, Joanna, Michał Woźniak, Mike Kestemont, Albert Leśniak, Wojciech Łukasik, Artjoms Šeļa, and Maciej Eder. “Detecting Direct Speech in Multilingual Collection of 19th Century Novels.” In Proceedings of LT4HALA 2020-1st Workshop on Language Technologies for Historical and Ancient Languages, edited by Rachele Sprungoli and Marco Passarotti, https://lrec2020.lrec-conf.org/media/proceedings/Workshops/Books/LT4HALAbook.pdf:100–104. Paris: European Language Resources Association (ELRA), 2020.
+* Cinková, Silvie, et al. “Evaluation of Taggers for 19th-Century Fiction.” DH_Budapest_2019, edited by Gábor Pálko, ELTE, 2019, http://elte-dh.hu/dh_budapest_2019-abstract-booklet/.
+* Evert, Stefan, Fotis Jannidis, Thomas Proisl, Steffen Pielström, Thorsten Vitt, Christof Schöch, and Isabella Reger. “Understanding and Explaining Distance Measures for Authorship Attribution.” Digital Scholarship in the Humanities, 2017. https://academic.oup.com/dsh/article-pdf/32/suppl_2/ii4/21298943/fqx023.pdf.
+* Patras, Roxana, Ioana Galleron, Camelia GRĂDINARU, Ioana Lionte, and Lucreţia Pascaru. “The Splendors and Mist(Eries) of Romanian Digital Literary Studies: A State-of-the-Art Just before Horizons 2020 Closes Off.” Hermeneia 23 (2019): 207–22.
+* Stankovic, Ranka, Francesca Frontini, Tomaž Erjavec, and Carmen Brando. “Named Entity Recognition for Distant Reading in Several European Literatures.” In DH_Budapest_2019, edited by Gábor Pálko. Budapest: ELTE, 2019. http://elte-dh.hu/dh_budapest_2019-abstract-booklet/.
+* Schöch, Christof; Roxana Patras; Tomaž Erjavec; Diana Santos: "Creating the European Literary Text Collection (ELTeC): Challenges and Perspectives", submitted. 
+
+</small>
 
 --
 <br/>
 <br/>
 <br/>
-## Danke! · Thank you! · Merci!
+## Danke! · Thank you! · Merci! · Ačiū!
 <br/>
 <br/>
 <br/>
@@ -301,7 +313,7 @@ Reveal.initialize({
     controls: true,
     progress: true,
     history: true,
-    center: true,
+    center: false,
     transition: 'slide', // none/fade/slide/convex/concave/zoom
     // Optional reveal.js plugins
     dependencies: [
