--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 <body>
 <div class="reveal">
 <div class="slides">
-<section data-markdown="" data-separator="^\n---\n" data-separator-vertical="^\n--\n" data-charset="utf-8" data-background-image="img/basics/distantreading_rgb_tuerkis-blau_icon-transparent.png" data-background-size="100px" data-background-position="right 10px top 10px">
+<section data-markdown="" data-separator="^\n-\n" data-separator-vertical="^\n--\n" data-charset="utf-8" data-background-image="img/basics/distantreading_rgb_tuerkis-blau_icon-transparent.png" data-background-size="100px" data-background-position="right 10px top 10px">
 <script type="text/template">
 
 <!-- THIS IS WHERE THE CONTENT GOES! -->
@@ -50,7 +50,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
 
 
----
+-
 # Overview
 1. [What are COST Actions?](#/2)
 2. [What is DISTANT READING about?](#/3)
@@ -60,7 +60,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 6. [Conclusions](#/7)
 
 
----
+-
 # 1. What are COST Actions?
 
 --
@@ -94,7 +94,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 * Conference Grants <!-- .element: class="fragment" data-fragment-index="4" -->
 
 
----
+-
 # 2. What is *Distant Reading for European Literary History* about?
 
 --
@@ -124,7 +124,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 * several spin-off projects
 
 
----
+-
 # 3. Text Collection Building
 
 --
@@ -177,8 +177,8 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 * need for stability vs. adjustment of composition and encoding guidelines <!-- .element: class="fragment" data-fragment-index="6" -->
 
 
----
-# Methods and Tools
+-
+# 4. Methods and Tools
 
 
 --
@@ -221,8 +221,8 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
 
 
----
-# Literary History and Theory
+-
+# 5. Literary History and Theory
 
 --
 ## Objectives
@@ -257,7 +257,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
 
     
 
----
+-
 # Time for questions! 
 
 --
